samples/_failures_safe/1761606586_f9dab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eaaa3910.c: In function ‘main’:
./samples/SAFE/__tmp_eaaa3910.c:142:13: error: expected expression at end of input
  142 |             result = compress_lzw(input_data, input_len, output_data,
      |             ^~~~~~
./samples/SAFE/__tmp_eaaa3910.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eaaa3910.c:142:13: error: expected declaration or statement at end of input
